# smart_dustbin

./: .gitignore  README.md
aws/: claim_policy.json  deploy.ps1  deploy.sh  deploy_fleet_provisioning.ps1  deploy_fleet_provisioning.sh  device_policy.json  fleet_provisioning_template.json  lambda_preprovision_hook.py  lambda_register.py  lambda_telemetry.py
aws/claim_certs/: claim.cert.pem  claim.public.key
docs/: AWS_SETUP_STEP_BY_STEP.md  FLEET_PROVISIONING_ROLLOUT.md  INDUSTRIAL_PROVISIONING_ARCHITECTURE.md  SMARTBIN_MASTER_BUILD_GUIDE.md  SMARTBIN_V2_GUIDE.md  firmware_additions.md
firmware-fleet/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
firmware-fleet/main/: CMakeLists.txt  idf_component.yml  main_provisioning.c
firmware-fleet/main/certs/claim/: README.txt  claim.private.key
smartbin_mappls_native/: build.gradle  local.properties  settings.gradle
smartbin_mappls_native/app/: build.gradle
smartbin_provisioner/: README.md  pubspec.yaml
smartbin_provisioner/android/: gradle.properties
smartbin_provisioner/android/app/: build.gradle.kts
smartbin_provisioner/ios/Runner/: Info.plist
smartbin_provisioner/ios/Runner.xcodeproj/: project.pbxproj
smartbin_provisioner/lib/: main.dart
smartbin_provisioner/linux/: CMakeLists.txt
smartbin_provisioner/linux/runner/: my_application.cc
smartbin_provisioner/macos/Runner.xcodeproj/: project.pbxproj
smartbin_provisioner/test/: widget_test.dart
smartbin_provisioner/web/: index.html  manifest.json
smartbin_provisioner/windows/: CMakeLists.txt
(+76 files in other folders)
